--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chalk": "^5.4.1",
     "cli-color": "^2.0.4",
     "colors": "^1.4.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "simple-logs": "^0.2.11"
   }
 }
