--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.4.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongodb": "^6.14.2",
     "simple-logs": "^0.2.11"
   }
 }
