--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "simple-logs": "^0.2.11"
   }
 }
